k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yt-clone
  labels:
    name: yt-clone
    app: youtube-clone
